<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.1"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/word_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBtnBack"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <com.lion.boo100word.ui.custom.SearchingTextField
        android:layout_margin="10dp"
        android:id="@+id/tf_word_searching_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_right_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:buttonTint="#ABABAB"
        app:layout_constraintBottom_toBottomOf="@id/textView5"
        app:layout_constraintEnd_toStartOf="@id/textView5"
        app:layout_constraintTop_toTopOf="@id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="12dp"
        android:text="맞힌 단어만"
        android:textColor="#ABABAB"
        app:layout_constraintStart_toEndOf="@+id/cb_right_words"
        app:layout_constraintTop_toBottomOf="@id/tf_word_searching_field" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_wrong_words"
        android:layout_marginStart="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:buttonTint="#ABABAB"
        app:layout_constraintStart_toEndOf="@id/textView5"
        app:layout_constraintTop_toTopOf="@id/cb_right_words" />

    <TextView
        android:id="@+id/txt_wrong"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="-15dp"
        android:text="틀린 단어만"
        android:textColor="#ABABAB"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cb_wrong_words"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_word_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_wrong"
        app:spanCount="2"
        tools:itemCount="8"
        tools:listitem="@layout/item_word_list" />

    <ImageView
        android:id="@+id/iv_no_matching_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_ghost_searching"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_word_searching_field" />

    <TextView
        android:id="@+id/tv_no_matching_words"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="21sp"
        android:text="@string/wordList_no_matching_words"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|normal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_no_matching_words" />
</androidx.constraintlayout.widget.ConstraintLayout>